# attention

./: .gitignore  config.py  data.py  dataset.py  decoder.py  encoder.py  hello.py  main.py  pyproject.toml  test.py  train.py  transformer.py  validation.py
models/: decoder.py  encoder.py  transformer.py
runs/tmodel/: events.out.tfevents.1747898205.fedora.20398.0
